[metadata]
# This includes the license file in the wheel.
license_file = LICENSE

[tool:pytest]
# Deterministic ordering for tests; useful for pytest-xdist.
env =
	PYTHONHASHSEED=0
filterwarnings =
    ignore:inspect.getargspec:DeprecationWarning:tensorflow
    ignore::pytest.PytestUnknownMarkWarning
		ignore:builtin type EagerTensor has no __module__ attribute:DeprecationWarning
		ignore:Parameters to load are deprecated.:DeprecationWarning
